Finished all test for controllers, all controllers tests working